Fix search button jumping

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -418,7 +418,7 @@ dl.citation{
 
 @media(max-width: 767px) {
   .form-inline .form-group {
-    margin-bottom:1rem;
+    margin-bottom:0rem;
   }
   .button-login{display:inline-block;}
 }
